<resources>
    <string name="app_name">Matajer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_upTV">Sign Up</string>
    <string name="lastname_signup">LastName</string>
    <string name="firist_name_signup">firist Name</string>
    <string name="e_mail_signup">E-mail</string>
    <string name="phone_signup">Phone</string>
    <string name="password_signup">Password</string>
    <string name="forget_password_signup">forget password ?</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">SignUp</string>
    <string name="login_TV">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="send_your_email_to_restore_your_account_password_forget_passord">send your email to restore your account password</string>
    <string name="abbout_us">Abbout us</string>
    <string name="sittimgs">Sittings</string>
    <string name="username">UserName</string>
    <string name="home1">Home</string>
    <string name="favoret">Favoret</string>
    <string name="history">History</string>
    <string name="bullshet_in_details_activity" translatable="false">adcasd dskal;dkasl;dkl;a dkl; askd ls;a d asldk asl;dkas asdl kasldk as; as kasl;dk asl; a asldk al;dk l;asdk ak asl;kd asl;djklasjhdjashdjk j asjk nasjkdn asjkd</string>
    <string name="price_in_details_activity" translatable="false">3500</string>
    <string name="buy_now_btn">Buy Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_your_image">upload your image</string>
    <string name="save">Save</string>
    <string name="save_image">Save Image</string>
    <string name="name">Name</string>
    <string name="change_app_language">Change App Language</string>
    <string name="english" translatable="false">English</string>
    <string name="Arabic" translatable="false">عربي</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Edit_Profile_settings">Edit Profile</string>
    <string name="Change_Language">Change Language</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Share_App">Share App</string>
    <string name="Rate_App">Rate App</string>
    <string name="Log_out">Log out</string>
    <string name="fav">Favouret</string>
    <string name="About_Us" translatable="false">اعلااان هاااام 📣📣 تم فتح التسجل في #تحدي_90_يوم_اندرويد تحت رعاية مبادرة المبرمج المصري💪💪 يلا بينا نعرف اي هوا التحدي وازاي هنساعدك من خلال التحدي انك تدخل المجال وتكون مؤهل بالكامل لسوق العمل تعالو الاول نعرف اي اللي هندرسة في الدبلومة واي نظام التحدي 🔴 محتوي الدبلومة : 🔴 level one 🔵Principles of java ➖ What\'s Java ➖ Java history ➖ Java Byte code ➖ Java virtual machine ➖ JRE Java runtime environment ➖ JDK Java Development kit ➖ SDK Software Development Kit ➖ API Application Programming Interfaces ➖ Variables ➖ Data Types ➖ Strings ➖ Comments ➖ Math Operations ➖ Conditional statement if- switch ➖ Looping ➖ Arrays ➖ Array List ➖ Exceptions ➖ Casting 🔵OOP ➖ Class ➖ Object ➖ Member Variable ➖ Member method ➖ Constructor ➖ Access Modifiers ➖ Non-Access Modifiers ➖ Inheritance ➖ Polymorphism ➖ Interfaces ➖ Abstraction 🔴level two Introduction to Android ➖ What’s Android? ➖ Why Android ➖ Android Market ➖ Android Versions ➖ what’s new Android 🔵Android Architecture ➖ Android Stack ➖ Android Features ➖ Android Architecture layer 🔵Tools ➖ SDK (software development kit) ➖ JDK (java development kit) ➖ IDE (integrated development environment 🔵Android Studio ➖ Setup Android Studio ➖ Android Manifest ➖ Important Folders ➖ Logcat ➖ Emulator and genymotion 🔵Android Components ➖ Activities and services ➖ Broadcast Receivers ➖ Content Providers 🔵Building Application UI ➖ Material design concept ➖ Layouts ➖ Layouts type ➖ attributes ➖ View class 🔵Activities and Fragments ➖ Life Cycle ➖ Resources ➖ Navigation Drawer ➖ Tab layout 🔵Intents ➖ Explicit Intents ➖ Implicit Intent ➖ Intent Filter 🔵List View ➖ Adapter ➖ List views ➖ Custom views ➖ Recycler view 🔵Android HTTP Client and REST web service Retrofit ➖ HTTP Request and Response ➖ Postman and parsing JSON ➖ upload Image to server 🔵Advanced Topics ➖ Permissions ➖ Google Maps ➖ Select Image From Gallery OR Camera ➖ Shared preferences ➖ git version control زي مشفنا في محتوي الدبلومة هنبدا معاكم من الصفر لحد متقدر تنزل شغل في اي شركة محترمة وكمان هتتعلم ازاي تشتغل علي مواقع الفريلانسر لاننا مؤمنين ان الفترة القادمة معظم الوظائف هتكون شغل فريلانس وده اللي هيزود فرص الشغل في المستقبل يلا بينا نعرف تفاصيل اكتر عن التحدي 🚶‍♂️🚶‍♀️ في خلال الفترة دي هتدخل تحدي مع زملائك في المبادرة وهنبدا في كل مجال من الصفر لحد متوصل لمستوي يؤهلك بالكامل للعمل وده من خلال التحديات اللي هنعملها خلال الفترة دي وكمان الجوائز التحفيزية اللي هتساعدك انك تتحفز وتكمل التحدي وتكون مؤهل بالكامل لسوق العمل 💪💪 الجوائز 🔵 المركز الاول : هنجمع تيم من كل مجال في المبادرة (android ,front end ,full stack .net ) وهيتم دعمه بمبلغ لمساعدتهم في بدا شركتهم الخاصة 🔵 المركز الثاني : هيتم استرداد مبلغ الدبلومة بالكامل + مبلغ 2000 جنيها مكافئة + هيكون في ترشيح للشركات اللي بتتواصل معانا 🔵 المركز الثالث : هيتم استرداد مبلغ الدبلومة بالكامل + مبلغ 1000جنيها مكافئة + هيكون في ترشيح للشركات اللي بتتواصل معانا 🔵 المركز الرابع : هيتم استرداد مبلغ الدبلومة بالكامل + هيكون في ترشيح للشركات اللي بتتواصل معانا 🔵 في نهاية المبادرة بتحصل علي كورسات من موقع يوديمي بقيمة 500 دولار بتحصل عليها مجانا من المبادرة علشان تكون مؤهل بنسبة 100% انك تنزل شغل في اي شركة😍😍 🔵 بعد الدبلومة هتاخد شهاده معتمده من المبادرة و اكاديمية ريلود ◀️سوف يتم تحديد المراكز عن طريق المشاريع اللي هتم خلال فترة التحدي 🔴ملاحظة مهمة جداا جداا : جميع الانستراكتور في المبادرة خبرتهم في المجال فوق 5 سنين في مجال التدريب و العملي بحيث يقدر يساعدك في توصيل المعلومة وكمان يساعدك انك تفهم سوق العمل 🔴 ملاحظة : ➖الدراسة هتكون متاحة اونلاين و اوفلاين (في حالة تحسن ظروف البلد وفي هذه الحالة الدراسة في الاول هتكون اونلاين وبمجرد ميصدر قرار بفتح المراكز يمكنك المتابعة اوفلاين في المقر الرئيسي للمبادرة في القاهرة) ➖جميع الدبلومات هتبدا من الصفر لحد متساعدك انك تكون مؤهل انك تشتغل في اي شركة محترمة ➖ الدراسة هتبدا بداية من شهر 7 ➖ اول محاضرة مجانية تماما علشان تقدر تشوف طريقة الشرح والتفاعل وبعد المحاضرة تقرر اذا كنت هتكمل ولا لا( واحنا واثقين انك هتكمل❤️ ) 🔵 سعر الدبلومة بالكامل 1000جنيها فقط لا غير ولا يوجد اي مصاريف اخري 🔵للينك التسجيل :https://cutt.us/EgyptianProgrammer 🔵 ويمكنك التسجيل مباشرتا عن طريق دفع المبلغ علي رقم فودافون كاش والتواصل علي نفس الرقم لتاكيد التسجيل في الدبلومة 🔵رقم فودافون كاش : 01004042428 🔴 ارقام التواصل : ➖01004042428 ➖01066801064 #تحدي_90_يوم_اندرويد💪💪 #مبادرة_المبرمج_ألمصري❤️❤️</string>
<string name="Loading...">Loading</string>
</resources>