<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.Fragments.LogoutFragment">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@id/no"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:id="@+id/TVLOGOUT"
       android:text="@string/are_you_sure_want_to_logout"
       android:textColor="#00aced"
       android:textSize="30sp"
       app:layout_constraintVertical_bias="0.01"
       />

    <Button
        android:id="@+id/no"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_login_sginup"
        android:text="@string/no"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toEndOf="@id/yes"
        app:layout_constraintTop_toBottomOf="@id/TVLOGOUT"
        app:layout_constraintVertical_bias="0.229" />

    <androidx.cardview.widget.CardView
        android:id="@+id/yes"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVLOGOUT"
        app:cardElevation="10dp"
        >
        <Button
            android:id="@+id/yesbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:textSize="30sp"
            />
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>